v4.0.5
 - Fixed issue with script not handling site returning no videos

v4.0.4
 - Fixed login not working due to floatplane.com changes
 - Fixed login checks to work with new login functionality

v4.0.3
 - Fixed maxVideos not working correctly due to ordering update in 4.0.1
 - Fixed matching for some subChannels not properly ignoring case
 - Fixed update script to properly move new settings for 4.0.0

v4.0.2
 - Fixed subscription fetching due to API update

v4.0.1
 - Fixed video's to be in the correct order when downloading
 - Fixed invalidLogin's not being handled with the new API
 

v4.0.0
 - Updated cookies for normal login
 - Added login functionality for Floatplane.com
 - Removed support for direct linustechtips.com use. Link your form account through Floatplane.com
 - Removed forceLogin option
 - Updated cookies in settings.json to use Floatplane.com values
 - Removed csrfKey from settings.json
 - Removed useFloatplane from settings.json
 - Removed useBitWit from settings.json
 - Added subscriptions in settings.json
 - Removed maxPages from settings.json
 - Updated maxVideos to work with any number
 - Updated posters
 - Rewrote subChannel detection code

v3.8.3
 - Set default user-agent to identify script
 - Added support for TechLinked

v3.8.2
 - Commented new code
 - Enabled new refresh settings
 - Fixed update and install script dependency issues
 - Update and install scripts now delete themselves on completion
 - Tweaked the way both run slightly

v3.8.1
 - Added remote plex server support
 - Added plexToken setting
 - Added remotePlex setting
 - Added remotePlexIP setting
 - Added remotePlexPort setting
 - Added localPlex setting
 - Changed plex update settings to be based off remotePlex and localPlex being true
 - Changed plexSection default to 0
 - Added prompt for some settings inscript
 - Updated update.js for new settings
 - Added beta option in update.js

v3.7.1
 - Some small tweaks
 - Colour fixes

v3.7.0