@@ -1,1 +1,1 @@
-{"version": "4.0.3", "beta": "4.0.4"}
+{"version": "4.0.5", "beta": "4.0.7"}
