@@ -1,5 +1,5 @@
 {
-  "version": "4.0.3",
+  "version": "4.0.5",
   "videoFolder": "./videos/",
   "maxVideos": 5,
   "maxParallelDownloads": -1,
